2000-06-05  Paul Eggert

	Port to Mingw32, based on suggestions from Christian Groessler
	<cpg@aladdin.de>.

	* src/isdir.c: New file, taken from fileutils.

	* src/Makefile.am (base_sources): Add isdir.c.

	* src/grep.c (grepfile): Use isdir instead of doing it inline.
	(grepdir): Suppress ancestor check if the directory's inode and device
	are both zero, as that occurs only on Mingw32 which doesn't support
	inode or device.

	* src/system.h (isdir): New decl.
	(is_EISDIR): Depend on HAVE_DIR_EACCES_BUG, not D_OK.
	Use isdir, not access.

2000-06-02  Paul Eggert

	Problen noted by Gerald Stoller <gerald_stoller@hotmail.com>

	* src/grep.c (main): POSIX.2 says that -q overrides -l, which
	in turn overrides the other output options.  Fix grep to
	behave that way.

2000-05-27  Paul Eggert

	Simplify and tune the buffer allocation strategy.  Do not reserve a
	large save area: reserve only enough bytes to hold the residue, plus
	page alignment.  Put a newline sentinel before the buffer, for speed
	when searching backwards for newline.

	* src/grep.c (ubuffer, bufsalloc, PREFERRED_SAVE_FACTOR, page_alloc):
	Remove.  All uses changed.
	(INITIAL_BUFSIZE): New macro.
	(reset, fillbuf): Use simpler buffer allocation strategy.
	(reset): Check for preposterously large pagesize that would cause
	later calculations to overflow.
	(fillbuf): Do not resize buffer if there's room at the end for
	at least one more page.  This greatly increases performance when
	reading from non-regular files that contain no newlines.
	When growing the buffer, double its size instead of using a
	more complicated algorithm.
	(prtext, grep): Speed up by relying on the newline sentinel before the
	start of the buffer.
	(grep): When looking backwards for the last newline in a buffer,
	stop when we hit the residue, since it can't contain a newline.
	This avoids an O(N**2) algorithm when reading binary data from
	a pipe.  Use a sentinel to speed up the backward search for newline.